.Se termina de implementar fileManager con Lista de Archivos en su atributo 	* Se agrega descripcion en los metodos mas relevantes 	* Se comienza a agregar codigo en el Manager para implementar 	  los comandos save y load

--- a/Src/makefile
+++ b/Src/makefile
@@ -42,4 +42,4 @@ clean:
 all: $(PROGR)
 	$(CC) $(CPPFLAGS) -o $(PROGR) $(OBJECTS)
 run : $(PROGR)
-	valgrind --leak-check=yes ./$(PROGR) -i input.txt -o -
+	valgrind --leak-check=yes ./$(PROGR) -i input.txt -o output.txt
