.Se corrijen problemas de fugas de memoria y se corrijen comandos init, load y save 	* Se corrije la clase Transaction con respecto al constructor 	  por copia, provocando fugas de memoria. 	* Se corrije la clase Block con respecto a la cantidad de 	  transacciones y se agrega la correcion de Merkle 	* Se corrijen metodos de Bookkeeper para agregar bloques a la 	  historia y se implementan metodos para liberar memoria 	* Se corrije destructor de FileManager dado que ahora opera con 	  lista de Bloques y se mejoran metodos de Validacion y carga de 	  blockchains externas 	* Se implementa metodo para borrar nodos de lista dentrode un 	  while y se prueba exitosamente en la HistoryBook 	* Se modifica el makefile para correr ejemplos del programa 	* Se agregan nuevos estados y se modifica el Manager para que 	  imprima los mensajes asociados 	* Se toma como decision de diseño NO ACEPTAR BLOCKCHAINS DE TXT 	  QUE POSEAN MAS DE UNA TRANSACCION POR BLOQUE

--- a/Src/makefile
+++ b/Src/makefile
@@ -47,5 +47,14 @@ clean:
 	rm -f core $(PROGR) $(OBJECTS)
 all: $(PROGR)
 	$(CC) $(CPPFLAGS) -o $(PROGR) $(OBJECTS)
-run : $(PROGR)
+memcheck : $(PROGR)
+	valgrind  --leak-check=yes ./$(PROGR) -i input.txt -o output.txt
+memcheck_s : $(PROGR)
 	valgrind -s --leak-check=yes ./$(PROGR) -i input.txt -o output.txt
+std_out : $(PROGR)
+	./$(PROGR) -i input.txt -o -
+std_in : $(PROGR)
+	./$(PROGR) -i - -o output.txt
+std : $(PROGR)
+	./$(PROGR) -i - -o -
+
