.Se agrega el metodo mine exitosamente con valgrind chequeado 	* Se corrije constructor de Block para lista de transacciones 	  para evitar fugas de memoria y se agrega el metodo 	  getBlockHash 	* Se agregan los metodos de getMempool y getLastBlockHash 	  en bookkeeper 	* Se agrega el metodo createBlock recibiendo lista de 	  Transacciones en Builder 	* Se modifica el Manager para contener los nuevos metodos 	* Se modifica Mempool para que cree un objeto dinamico al recibir           una transaccion para evitar fugas de memoria, y se elimina           MempoolUnit por desuso 	* Se borra MempoolUnit del makefile para que funcione todo 	* Se agrega la carpeta Docs y se actualizan los txt

--- a/Src/makefile
+++ b/Src/makefile
@@ -1,5 +1,5 @@
 
-OBJECTS = main.o sha256.o cmdline.o  Queue.o TransactionInput.o TransactionOutput.o Transaction.o Block.o BlockChainBuilder.o BlockChainFileManager.o BlockChainManager.o BlockChainBookkeeper.o BlockChainHistoryBook.o MempoolUnit.o Mempool.o # Los archivos compilados individuales
+OBJECTS = main.o sha256.o cmdline.o  Queue.o TransactionInput.o TransactionOutput.o Transaction.o Block.o BlockChainBuilder.o BlockChainFileManager.o BlockChainManager.o BlockChainBookkeeper.o BlockChainHistoryBook.o Mempool.o # Los archivos compilados individuales
 PROGR = miner.exe # Nombre del archivo ejecutable
 CPPFLAGS = -g -Wall -pedantic -Werror # -g opcion de g++ para debugear
 
@@ -17,10 +17,8 @@ sha246.o : sha246.cpp sha246.h
 	$(CC) $(CPPFLAGS) -c sha246.cpp
 queue.o : Queue.cpp Queue.h
 	$(CC) $(CPPFLAGS) -c Queue.cpp
-Mempool.o : Mempool.cpp Mempool.h MempoolUnit.h
-	$(CC) $(CPPFLAGS) -c Mempool.cpp
-MempoolUnit.o : MempoolUnit.cpp MempoolUnit.h Transaction.h
-	$(CC) $(CPPFLAGS) -c MempoolUnit.cpp	
+Mempool.o : Mempool.cpp Mempool.h lista.h
+	$(CC) $(CPPFLAGS) -c Mempool.cpp	
 BlockChainManager.o : BlockChainManager.cpp BlockChainManager.h BlockChainFileManager.h BlockChainBuilder.h BlockChainBookkeeper.h BlockChainStatus.h 
 	$(CC) $(CPPFLAGS) -c BlockChainManager.cpp
 BlockChainFileManager.o : BlockChainFileManager.cpp BlockChainFileManager.h BlockChainBuilder.h BlockChainDataTypes.h BlockChainStatus.h Queue.h
