.Se integra el comando balance al programa 	* Se elimina la implementacion de Cuentas por tener errores de 	  diseño y fuga de memoria. 	* Se crea la clase BlockChainUser preparada para operar como 	  nodo de lista. 	* Se implementa el comando balance entre Bookkeeper y 	  lista<BlockChainUser *> 	* Se agregan los estados correspondientes a usuario sin fondos y 	  se trabajan en BlockChainManager 	* Se mueven todos los ejemplos txt al directorio Docs/ 	* Se agregan casos de prueba de Lucas. 	* Se modifica el makefile para integrar a BlockChainUser 	* Se comenta todo archivo que use Cuentas.cpp 	* Falta corregir el caso en que un usuario hace una 	  trasnferencia a otro y este otro le transfiere antes de 	  confirmar el bloque

--- a/Src/makefile
+++ b/Src/makefile
@@ -1,5 +1,5 @@
 
-OBJECTS = main.o sha256.o cmdline.o  Queue.o TransactionInput.o TransactionOutput.o Transaction.o Block.o BlockChainBuilder.o BlockChainFileManager.o BlockChainManager.o BlockChainBookkeeper.o BlockChainHistoryBook.o Mempool.o # Los archivos compilados individuales
+OBJECTS = main.o sha256.o cmdline.o  Queue.o TransactionInput.o TransactionOutput.o Transaction.o Block.o Mempool.o BlockChainUser.o BlockChainBuilder.o BlockChainFileManager.o BlockChainManager.o BlockChainBookkeeper.o BlockChainHistoryBook.o # Los archivos compilados individuales
 PROGR = miner.exe # Nombre del archivo ejecutable
 CPPFLAGS = -g -Wall -pedantic -Werror # -g opcion de g++ para debugear
 
@@ -18,7 +18,9 @@ sha246.o : sha246.cpp sha246.h
 queue.o : Queue.cpp Queue.h
 	$(CC) $(CPPFLAGS) -c Queue.cpp
 Mempool.o : Mempool.cpp Mempool.h lista.h
-	$(CC) $(CPPFLAGS) -c Mempool.cpp	
+	$(CC) $(CPPFLAGS) -c Mempool.cpp
+BlockChainUser.o : BlockChainUser.cpp BlockChainUser.h
+	$(CC) $(CPPFLAGS) -c BlockChainUser.cpp
 BlockChainManager.o : BlockChainManager.cpp BlockChainManager.h BlockChainFileManager.h BlockChainBuilder.h BlockChainBookkeeper.h BlockChainStatus.h 
 	$(CC) $(CPPFLAGS) -c BlockChainManager.cpp
 BlockChainFileManager.o : BlockChainFileManager.cpp BlockChainFileManager.h BlockChainBuilder.h BlockChainDataTypes.h BlockChainStatus.h Queue.h
@@ -36,9 +38,7 @@ Transaction.o : Transaction.cpp Transaction.h lista.h TransactionOutput.h Transa
 TransactionOutput.o : TransactionOutput.cpp TransactionOutput.h
 	$(CC) $(CPPFLAGS) -c TransactionOutput.cpp
 TransactionInput.o : TransactionInput.cpp TransactionInput.h
-	$(CC) $(CPPFLAGS) -c TransactionInput.cpp
-	
-	
+	$(CC) $(CPPFLAGS) -c TransactionInput.cpp	
 
 
 clean:
